Cwdoe 606 add observer role (#15)
* items/mine endpoints changed to my-items
* added observer role
* modified endpoints for by team endpoints
* fixed xapi issues
